--- a/subjects.html
+++ b/subjects.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>6th Sem Subjects</hl>
+<h1 style="color:red">6th Sem Subjects</hl>
 <h3>Machine Learning</h3>
 <h3>Embedded Systems</h3>
 <h3>Cloud Computing</h3>
